--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,11 @@ Makefile
 doc-dev
 
 pgdata
+# Ignore Django Migrations in Development if you are working on team
 
+# Only for Development only
+ **/migrations/**
+ !**/migrations
+ !**/migrations/__init__.py
 
 
