--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,8 @@ pgdata
 # Ignore Django Migrations in Development if you are working on team
 
 # Only for Development only
- **/migrations/**
- !**/migrations
- !**/migrations/__init__.py
+# **/migrations/**
+# !**/migrations
+# !**/migrations/__init__.py
 
 
